# DataCheck

./: CMakeLists.txt  Dockerfile  all_check_conn.sh  autohdmap_datacheck.sh  compile.sh  compilee.sh  make.sh
config/1.0/: config.properties  task.json
config/1.0/model/: C_NODE.json  C_NODECONN.json  HD_DIVIDER_ATTRIBUTE.json  HD_DIVIDER_NODE.json  HD_JUNCTION.json  HD_LANE.json  HD_LANE_ATTRIBUTE.json  HD_LANE_ATTRIBUTE_RESTRICTION.json  HD_LANE_CONNECTIVITY.json  HD_LANE_GROUP.json  HD_OBJECT_PG.json  HD_OBJECT_PL.json  HD_OBJECT_PT.json  HD_POINT.json  HD_POLYGON.json  HD_ROAD_ATTRIBUTE.json  HD_R_LANE_GROUP.json  HD_TOLLBOOTH.json  HD_TRAFFICSIGN.json  HD_TRAFFIC_LIGHT.json  HD_TRAFFIC_LIGHT_GROUP.json  HD_TUNNEL.json  NODECONN.json  NODEINFO.json  ROAD.json  ROAD_NODE.json  TRAFFICRULE.json
config/2.0/: README.md  config.properties  datachecks.xml  task.json
config/2.0/model/: HD_DIVIDER_ATTRIBUTE.json  HD_DIVIDER_NODE.json  HD_LANE_CONNECTIVITY.json  HD_POLYGON.json  HD_POLYLINE.json  HD_ROAD_ATTRIBUTE.json  HD_TOLLBOOTH.json  HD_TRAFFICSIGN.json  HD_TRAFFIC_LIGHT.json  HD_TRAFFIC_LIGHT_GROUP.json  NODECONN.json  NODEINFO.json  ROAD.json  TRAFFICRULE.json
config/3.0/: check_list.json  config.properties  count_check.json  datachecks.xml  length_check.json  resource.json  task.json
config/3.0/model/: ADAS_LA.json  ADAS_NODE.json  ADAS_Sign.json  BARRIER.json  BARRIER_GEOMETRY.json  C_NODE.json  C_NODECONN.json  HD_BRIDGE.json  HD_DIVIDER.json  HD_DIVIDER_ATTRIBUTE.json  HD_DIVIDER_NODE.json  HD_Divider_SCH.json  HD_JUNCTION.json  HD_LANE.json  HD_LANE_ATTRIBUTE.json  HD_LANE_ATTRIBUTE_RESTRICTION.json  HD_LANE_CONNECTIVITY.json  HD_LANE_GROUP.json  HD_LANE_SCH.json  HD_LIMIT_HEIGHT.json  HD_Lane_SCH.json  HD_POINT.json  HD_POLYGON.json  HD_POLYLINE.json  HD_ROAD_ATTRIBUTE.json  HD_R_LANE_GROUP.json  HD_R_LO_LANE.json  HD_R_LO_Lane.json  HD_R_LO_ROAD.json  HD_TOLLBOOTH.json  HD_TOPO_LANEGROUP.json  HD_TRAFFICSIGN.json  HD_TRAFFIC_LIGHT.json  HD_TRAFFIC_LIGHT_GROUP.json  HD_TUNNEL.json  LG_ROADNODE_INDEX.json  NODECONN.json  NODEINFO.json  ROAD.json  ROAD_FACILITIES.json  (+5 more)
config/3.0/resource/: DIVIDER.json  R_DIVIDER_DREF.json
doc/: 中间规格数据质检服务使用说明文档v1.0.docx  交换规格检查项文档.xlsx
modules/: CMakeLists.txt
modules/apps/: CMakeLists.txt
modules/apps/autohdmap_check_app/: CMakeLists.txt  DataCheckApp.cpp
modules/apps/autohdmap_datacheck_server/: AutomapDataCheckServer.cpp  AutomapDataCheckServer.h  AutomapDataCheckTask.cpp  AutomapDataCheckTask.h  CMakeLists.txt  main.cpp
modules/apps/kxs_datacheck/: CMakeLists.txt  kxs_datacheck.cpp
modules/apps/osm_data_check/: CMakeLists.txt  orgdata_check.cpp
modules/checkcore/: CMakeLists.txt
modules/checkcore/include/: CommonDefine.h  CommonInclude.h  DataCheckConfig.h  IMapProcessor.h  IModelProcessor.h  IProcessor.h  MapProcessManager.h  ModelProcessManager.h  ProcessManager.h
modules/checkcore/include/businesscheck/: AdasCheck.h  DividerAttribCheck.h  DividerCheck.h  DividerShapeDefectCheck.h  DividerShapeNormCheck.h  DividerSplitCheck.h  DividerTopoCheck.h  JsonDataLoader.h  LaneAttribCheck.h  LaneCheck.h  LaneGroupCheck.h  LaneGroupRelationCheck.h  LaneGroupTopoCheck.h  LaneShapeNormCheck.h  LaneTopoCheck.h  LocationTargetCheck.h  MapDataLoader.h  PolylineCheck.h  RoadCheck.h  SCHCheck.h
modules/checkcore/include/data/: DataManager.h  DividerGeomModel.h  ErrorDataModel.h  MapDataModel.h  ResourceDataManager.h  TaskDataModel.h  data_type.h
modules/checkcore/include/datacheck/: CountCheck.h  ForeignKeyCheck.h  LengthCheck.h  SlopeCheck.h  TableDescCheck.h
modules/checkcore/include/model/: ConsistencyCheckModel.h
modules/checkcore/include/process/: DataAttCheck.h  ModelBussCheck.h  ModelCheckFunc.h  ModelDataLoader.h  ModelFieldCheck.h  ModelRelationCheck.h  ModelSqlCheck.h  TaskLoader.h
modules/checkcore/include/storage/: CheckErrorOutput.h  CheckTaskInput.h  DataInput.h  ErrorReportJsonOutput.h  JsonDataInput.h  JsonDataTypes.h  MapDataInput.h  ModelDataInput.h  ModelInput.h
modules/checkcore/include/util/: CommonCheck.h  CommonUtil.h  DCFieldCheckUtil.h  DCFileUtil.h  FileUtil.h  GeometryUtil.h  GeosObjUtil.h  KDConvertUtil.hpp  KDGeoUtil.hpp  KDSUtil.h  KdsDataUtil.h  StringUtil.h  TimerUtil.h  check_list_config.h  dc_data_relation_util.h  distance.h  geos_obj_relation_util.h  product_shp_util.h  shp_file_load_util.h  task_info.h
modules/checkcore/src/: CommonDefine.cpp  DataCheckConfig.cpp  MapProcessManager.cpp  ModelProcessManager.cpp  ProcessManager.cpp
modules/checkcore/src/businesscheck/: AdasCheck.cpp  DividerAttribCheck.cpp  DividerCheck.cpp  DividerShapeDefectCheck.cpp  DividerShapeNormCheck.cpp  DividerSplitCheck.cpp  DividerTopoCheck.cpp  JsonDataLoader.cpp  LaneAttribCheck.cpp  LaneCheck.cpp  LaneGroupCheck.cpp  LaneGroupRelationCheck.cpp  LaneGroupTopoCheck.cpp  LaneShapeNormCheck.cpp  LaneTopoCheck.cpp  LocationTargetCheck.cpp  MapDataLoader.cpp  PolylineCheck.cpp  RoadCheck.cpp  SCHCheck.cpp
modules/checkcore/src/data/: DataManager.cpp  DividerGeomModel.cpp  ErrorDataModel.cpp  MapDataModel.cpp  ResourceDataManager.cpp  data_type.cpp
modules/checkcore/src/datacheck/: CountCheck.cpp  ForeignKeyCheck.cpp  LengthCheck.cpp  SlopeCheck.cpp  TableDescCheck.cpp
modules/checkcore/src/model/: ConsistencyCheckModel.cpp
modules/checkcore/src/process/: DataAttCheck.cpp  ModelBussCheck.cpp  ModelDataLoader.cpp  ModelFieldCheck.cpp  ModelRelationCheck.cpp  ModelSqlCheck.cpp  TaskLoader.cpp
modules/checkcore/src/storage/: CheckErrorJsonOutput.cpp  CheckErrorOutput.cpp  CheckTaskInput.cpp  DataInput.cpp  ErrorReportJsonOutput.cpp  JsonDataInput.cpp  JsonDataTypes.cpp  MapDataInput.cpp  ModelDataInput.cpp  ModelInput.cpp
modules/checkcore/src/util/: CommonCheck.cpp  CommonUtil.cpp  DCFieldCheckUtil.cpp  FileUtil.cpp  GeometryUtil.cpp  GeosObjUtil.cpp  KDConvertUtil.cpp  KDGeoUtil.cpp  KDSUtil.cpp  KdsDataUtil.cpp  StringUtil.cpp  check_list_config.cpp  dc_data_relation_util.cpp  distance.cpp  geos_obj_relation_util.cpp  shp_file_load_util.cpp  task_info.cpp
(+1 files in other folders)
