project(osm_data_check)
#
add_executable(${PROJECT_NAME} orgdata_check.cpp)
target_link_libraries(${PROJECT_NAME} autohdmap_checkcore)
target_link_libraries(${PROJECT_NAME} general autohdmap_core autohdmap_api autohdmap_clothoid)
target_link_libraries(${PROJECT_NAME} general PocoJSON PocoNet PocoFoundation  PocoUtil pthread)
target_link_libraries(${PROJECT_NAME} general geos glog cppsqlite3 nds_sqlite3 tinyxml pthread)

target_include_directories(${PROJECT_NAME} PUBLIC include)
target_include_directories(${PROJECT_NAME} PUBLIC ${HDMAP_LIBS_DIR}/modules/api/include)
target_include_directories(${PROJECT_NAME} PUBLIC ${HDMAP_LIBS_DIR}/modules/core/include)
target_include_directories(${PROJECT_NAME} PUBLIC ${HDMAP_LIBS_DIR}/modules/server/include)
target_include_directories(${PROJECT_NAME} PUBLIC ${HDMAP_LIBS_DIR}/modules/clothoid/include)

if (CMAKE_HOST_WIN32)
    INSTALL(TARGETS ${PROJECT_NAME} DESTINATION download/bin/win64)
elseif (CMAKE_HOST_APPLE)
    INSTALL(TARGETS ${PROJECT_NAME} DESTINATION download/bin/darwin)
elseif (CMAKE_HOST_UNIX)
    INSTALL(TARGETS ${PROJECT_NAME} DESTINATION download/bin/linux)
endif ()